tests/compilefail15.out
[1mtests/compilefail15.pas:14:12: [0m[1m[91merror:[0m Must pass in variable for parameter a of addone()
    14 | 	addone(7);